﻿YourBase Change Log

Release 0.10.0-RC1 - 2012/12/01
  第一个RC

  支持建表、删表
  支持单表Select
  支持Insert(一次只Insert一条记录)
  支持单一RowKey的Update、Delete
  支持Order By
  支持Group By、Having
  支持少量的字符串和数字函数
  支持下列11个聚合函数: 
  ---------------------
	AVG
	BOOL_AND
	BOOL_OR
	COUNT
	MAX
	MIN
	SUM
	STDDEV_POP
	STDDEV_SAMP
	VAR_POP
	VAR_SAMP

Release 0.10.0-RC2 - 2012/12/31

  支持视图
  支持Join
  支持子查询
  支持动态表
  去掉Client SQL预解析，转移到RegionServer


Release 0.10.0-RC3 - 未发布

Sub-task

    - 

Bug

    - 
    

Improvement

    - 在不修改任何HBase源代码的情况下把HBase集成到YourBase中。


New Feature

    - 


Task

    - 


Test

    - 简化测试启动过程，启动内置zookeeper、HMaster、HRegionServer

