@@ -1,14 +1,0 @@
-# The number of milliseconds of each tick
-tickTime=2000
-# The number of ticks that the initial 
-# synchronization phase can take
-#initLimit=10
-# The number of ticks that can pass between 
-# sending a request and getting an acknowledgement
-#syncLimit=5
-# the directory where the snapshot is stored.
-#dataDir=/export/crawlspace/mahadev/zookeeper/server1/data
-dataDir=E:/yourbase/test/zookeeper/data
-# the port at which the clients will connect
-clientPort=2181
-server.1=127.0.0.1:2888
